Use same background color for closebox

--- a/webextensions/sidebar/styles/square/mixed.css
+++ b/webextensions/sidebar/styles/square/mixed.css
@@ -44,7 +44,12 @@
                     );
 }
 
-.tab:not(.active) .closebox:hover::before {
+.tab .closebox:hover::before {
+  background: var(--tab-text-inverted);
+  opacity: 0.8;
+}
+
+.tab.active .closebox:hover::before {
   background: var(--tab-text-inverted);
   opacity: 1;
 }
