APply same style for newtab button and tabs

--- a/webextensions/sidebar/styles/square/mixed.css
+++ b/webextensions/sidebar/styles/square/mixed.css
@@ -17,7 +17,8 @@
                     );
 }
 
-.tab:not(.collapsed):hover {
+.tab:not(.collapsed):hover,
+.newtab-button:hover {
   background-color: var(--tab-surface-hover);
   background-image: -moz-linear-gradient(
                       top,
