--- a/webextensions/sidebar/styles/sound-button.css
+++ b/webextensions/sidebar/styles/sound-button.css
@@ -25,21 +25,31 @@
 
 .tab.faviconized .sound-button::before,
 .sound-button::after {
-  background: var(--tab-text);
+  -moz-context-properties: fill;
+  background: none no-repeat;
   content: "";
   display: inline-block;
+  fill: var(--tab-text);
   height: var(--sound-button-size);
-  mask-position: left center;
-  mask-repeat: no-repeat;
-  mask-size: 100%;
   position: absolute;
   right: 0;
   top: 0;
   width: var(--sound-button-size);
 }
+:root.simulate-svg-context-fill .tab.faviconized .sound-button::before,
+:root.simulate-svg-context-fill .sound-button::after {
+  background: var(--tab-text);
+  mask-position: left center;
+  mask-repeat: no-repeat;
+  mask-size: 100%;
+}
+
 .tab.faviconized .sound-button::before {
-  background: var(--tab-text-inverted);
+  fill: var(--tab-text-inverted);
   transform: scale(1.3, 1.3);
+}
+:root.simulate-svg-context-fill .tab.faviconized .sound-button::before {
+  background: var(--tab-text-inverted);
 }
 
 .tab:not(.collapsed) .sound-button:hover {
@@ -65,6 +75,15 @@
   .sound-button::before,
 .tab:not(.collapsed).has-muted-member.subtree-collapsed[data-child-ids]
   .sound-button::after {
+  background-image: url("./icons/audio-16-mute.svg");
+}
+:root.simulate-svg-context-fill .tab:not(.collapsed).muted.faviconized .sound-button::before,
+:root.simulate-svg-context-fill .tab:not(.collapsed).muted .sound-button::after,
+:root.simulate-svg-context-fill .tab:not(.collapsed).has-muted-member.subtree-collapsed[data-child-ids].faviconized
+  .sound-button::before,
+:root.simulate-svg-context-fill .tab:not(.collapsed).has-muted-member.subtree-collapsed[data-child-ids]
+  .sound-button::after {
+  background-image: none;
   mask-image: url("./icons/audio-16-mute.svg");
 }
 
@@ -77,10 +96,21 @@
   .sound-button::before,
 .tab:not(.collapsed).has-sound-playing-member.subtree-collapsed[data-child-ids]
   .sound-button::after {
+  background-image: url("./icons/audio-16.svg");
+}
+:root.simulate-svg-context-fill .tab:not(.collapsed).sound-playing:not(.muted).faviconized .sound-button::before,
+:root.simulate-svg-context-fill .tab:not(.collapsed).sound-playing:not(.muted) .sound-button::after,
+:root.simulate-svg-context-fill .tab:not(.collapsed).has-sound-playing-member.subtree-collapsed[data-child-ids].faviconized
+  .sound-button::before,
+:root.simulate-svg-context-fill .tab:not(.collapsed).has-sound-playing-member.subtree-collapsed[data-child-ids]
+  .sound-button::after {
+  background-image: none;
   mask-image: url("./icons/audio-16.svg");
 }
 
 .tab.faviconized .sound-button:hover::before {
+  background-color: var(--tab-text-inverted);
+  background-image: none !important;
   mask-image: none !important;
   border-radius: 150%;
   transform: scale(1.1, 1.1);
