--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -45,10 +45,6 @@
   width: var(--throbber-size);
 }
 
-#tabbar .tab:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
-  mask: -moz-element(#master-throbber) no-repeat;
-}
-
 :root:not(.throbber-synchronizing) .tab:not(.collapsed).loading:not(.throbber-unsynchronized) .throbber::before,
 :root:not(.throbber-synchronizing).have-loading-tab #master-throbber,
 :root.blocking-throbber #blocking-screen .throbber::before {
@@ -67,13 +63,31 @@
 
 :root.blocking-throbber #blocking-screen .throbber::before,
 #tabbar .tab:not(.collapsed).loading .throbber::before {
-  background: var(--throbber-color);
+  fill: var(--throbber-color);
   box-shadow: 0 0 2px var(--throbber-shadow-color);
+}
+:root.simulate-svg-context-fill :root.blocking-throbber #blocking-screen .throbber::before,
+:root.simulate-svg-context-fill #tabbar .tab:not(.collapsed).loading .throbber::before,
+#tabbar .tab:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
+  background: var(--throbber-color);
 }
 
 :root.blocking-throbber #blocking-screen .throbber::before,
 #tabbar .tab:not(.collapsed).loading .throbber::before {
+  -moz-context-properties: fill;
+  background: url("./throbber.svg") no-repeat;
+}
+:root.simulate-svg-context-fill :root.blocking-throbber #blocking-screen .throbber::before,
+:root.simulate-svg-context-fill #tabbar .tab:not(.collapsed).loading .throbber::before {
   mask: url("./throbber.svg");
+  mask-position: left center;
+  mask-repeat: no-repeat;
+  mask-size: 100%;
+}
+
+#tabbar .tab:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
+  background-image: none;
+  mask: -moz-element(#master-throbber) no-repeat;
   mask-position: left center;
   mask-repeat: no-repeat;
   mask-size: 100%;
@@ -95,9 +109,11 @@
 }
 
 :root.blocking-throbber #blocking-screen .throbber::before {
-  border-color: white;
-  background-color: white;
+  fill: white;
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.35);
+}
+:root.blocking-throbber.simulate-svg-context-fill  #blocking-screen .throbber::before {
+  background-color: white;
 }
 
 
