--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -77,7 +77,7 @@
   -moz-context-properties: fill;
   background: url("./throbber.svg") no-repeat;
 }
-:root.simulate-svg-context-fill :root.blocking-throbber #blocking-screen .throbber::before,
+:root.blocking-throbber.simulate-svg-context-fill #blocking-screen .throbber::before,
 :root.simulate-svg-context-fill #tabbar .tab:not(.collapsed).loading .throbber::before {
   mask: url("./throbber.svg");
   mask-position: left center;
