--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -66,7 +66,7 @@
   fill: var(--throbber-color);
   box-shadow: 0 0 2px var(--throbber-shadow-color);
 }
-:root.simulate-svg-context-fill :root.blocking-throbber #blocking-screen .throbber::before,
+:root.simulate-svg-context-fill.blocking-throbber #blocking-screen .throbber::before,
 :root.simulate-svg-context-fill #tabbar .tab:not(.collapsed).loading .throbber::before,
 #tabbar .tab:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
   background: var(--throbber-color);
