--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -2,22 +2,22 @@
 @import url("border.css");
 
 :root {
-  --tab-surface: ButtonFace;
-  --tab-text: ButtonText;
+  --tab-surface: Background;
+  --tab-text: CaptionText;
   --tab-text-inverted: ThreeDHighlight;
   --tab-border: ThreeDHighlight;
-  --tab-dropmarker: ButtonText;
+  --tab-dropmarker: CaptionText;
 }
 
 
 /* Tab Bar */
 
 :root {
-  background: ButtonFace;
+  background: Background;
 }
 
 #extra-background {
-  background: ButtonText;
+  background: CaptionText;
   opacity: 0.35;
 }
 
