Add ability to control scrollbar position #1713

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -112,31 +112,31 @@ button {
 }
 
 /* put scrollbar leftside */
-:root.left #tabbar {
+:root.left-scrollbar #tabbar {
   direction: rtl;
 }
-:root.left #all-tabs,
-:root.left #tabbar .after-tabs {
+:root.left-scrollbar #all-tabs,
+:root.left-scrollbar #tabbar .after-tabs {
   direction: ltr;
 }
 
 /* narrow scrollbar */
 
-:root.left.narrow-scrollbar #tabbar.overflow {
+:root.left-scrollbar.narrow-scrollbar #tabbar.overflow {
   margin-left: calc(var(--narrow-scrollbar-size) - var(--scrollbar-size));
 }
 
-:root.right.narrow-scrollbar #tabbar.overflow {
+:root.right-scrollbar.narrow-scrollbar #tabbar.overflow {
   margin-right: calc(var(--narrow-scrollbar-size) - var(--scrollbar-size));
 }
 
 /* no scrollbar */
 
-:root.left.no-scrollbar #tabbar.overflow {
+:root.left-scrollbar.no-scrollbar #tabbar.overflow {
   margin-left: calc(0px - var(--scrollbar-size));
 }
 
-:root.right.no-scrollbar #tabbar.overflow {
+:root.right-scrollbar.no-scrollbar #tabbar.overflow {
   margin-right: calc(0px - var(--scrollbar-size));
 }
 
