--- a/webextensions/sidebar/styles/square/base.css
+++ b/webextensions/sidebar/styles/square/base.css
@@ -17,10 +17,10 @@
   padding-left: 0.35em;
 }
 
-:root.left.overlay-scrollbar #tabbar.overflow .tab:not(.pinned) {
+:root.left-scrollbar.overlay-scrollbar #tabbar.overflow .tab:not(.pinned) {
   padding-left: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
-:root.right.overlay-scrollbar #tabbar.overflow .tab:not(.pinned) {
+:root.right-scrollbar.overlay-scrollbar #tabbar.overflow .tab:not(.pinned) {
   padding-right: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
 
