Apply background color correctly for Vertigo theme #1572

--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -57,7 +57,10 @@
   --tab-highlighted-base: var(--tab-surface);
 
   --throbber-color: var(--browser-bg-lightest, --tab-highlighted-glow);
+}
 
+:root,
+#background {
   background: var(--tab-surface);
 }
 
