--- a/webextensions/sidebar/styles/square/mixed.css
+++ b/webextensions/sidebar/styles/square/mixed.css
@@ -1,10 +1,16 @@
 @import url("base.css");
 @import url("border.css");
+@import url("active-tab-marker.css");
 @import url("plain-color.css");
 @import url("vertigo-color.css");
 @import url("shadow.css");
 
-:root {
+:root:not([color-scheme="system-color"]) {
+  --tab-active-marker: #0a84ff;
+}
+
+:root,
+#background {
   background: var(--tabbar-bg);
 }
 
