--- a/webextensions/sidebar/styles/square/plain-dark.css
+++ b/webextensions/sidebar/styles/square/plain-dark.css
@@ -1,5 +1,6 @@
 @import url("base.css");
 @import url("border.css");
+@import url("active-tab-marker.css");
 @import url("plain-color.css");
 @import url("plain-color-dark.css");
 @import url("shadow.css");
