--- a/webextensions/sidebar/styles/square/mixed.css
+++ b/webextensions/sidebar/styles/square/mixed.css
@@ -7,6 +7,8 @@
 
 :root:not([color-scheme="system-color"]) {
   --tab-active-marker: #0a84ff;
+  --tab-surface-active-gradient-start: rgba(249, 249, 250, 0.4);
+  --tab-surface-active-gradient-end:   rgba(249, 249, 250, 0);
 }
 
 :root,
@@ -16,37 +18,63 @@
 
 .tab {
   background-color: var(--tab-surface);
-  background-image: -moz-linear-gradient(
-                      top,
-                      rgba(0, 0, 0, 0.02) 0,
-                      rgba(0, 0, 0, 0) 50%
-                    );
 }
 
 .tab:not(.collapsed):hover,
 .after-tabs button:hover {
   background-color: var(--tab-surface-hover);
-  background-image: -moz-linear-gradient(
-                      top,
-                      rgba(213, 224, 245, 1) 0,
-                      rgba(213, 224, 245, 0.4) 50%
-                    );
 }
 
 .tab.active {
   background-color: var(--tab-surface-active);
-  background-image: -moz-linear-gradient(
-                      top,
-                      rgba(4, 83, 227, 0.04) 0,
-                      rgba(4, 83, 227, 0) 50%
-                    );
 }
 
 .tab.active:not(.collapsed):hover {
   background-color: var(--tab-surface-active-hover);
+}
+
+
+:root.left .tab.active {
+  background-image: -moz-linear-gradient(
+                      left,
+                      var(--tab-surface-active-gradient-start) 0,
+                      var(--tab-surface-active-gradient-end) 30%
+                    );
+}
+:root.left .tab.active:not(.collapsed):hover {
+  background-image: -moz-linear-gradient(
+                      left,
+                      var(--tab-surface-active-gradient-start) 0,
+                      var(--tab-surface-active-gradient-end) 50%
+                    );
+}
+
+:root.right .tab.active {
+  background-image: -moz-linear-gradient(
+                      right,
+                      var(--tab-surface-active-gradient-start) 0,
+                      var(--tab-surface-active-gradient-end) 30%
+                    );
+}
+:root.right .tab.active:not(.collapsed):hover {
+  background-image: -moz-linear-gradient(
+                      right,
+                      var(--tab-surface-active-gradient-start) 0,
+                      var(--tab-surface-active-gradient-end) 50%
+                    );
+}
+
+:root .tab.faviconized.active {
   background-image: -moz-linear-gradient(
                       top,
-                      rgba(199, 219, 252, 1) 0,
-                      rgba(199, 219, 252, 0.4) 50%
+                      var(--tab-surface-active-gradient-start) 0,
+                      var(--tab-surface-active-gradient-end) 40%
+                    );
+}
+:root .tab.faviconized.active:hover {
+  background-image: -moz-linear-gradient(
+                      top,
+                      var(--tab-surface-active-gradient-start) 0,
+                      var(--tab-surface-active-gradient-end) 60%
                     );
 }
