Lighten hover tab marker

--- a/webextensions/sidebar/styles/square/mixed.css
+++ b/webextensions/sidebar/styles/square/mixed.css
@@ -7,7 +7,7 @@
 
 :root:not([color-scheme="system-color"]) {
   --tab-active-marker: #0a84ff;
-  --tab-active-marker-inactive: #9aa0ad;
+  --tab-active-marker-inactive: #aab0bd;
   --tab-surface-active-gradient-start: rgba(249, 249, 250, 0.4);
   --tab-surface-active-gradient-end:   rgba(249, 249, 250, 0);
 }
