--- a/webextensions/sidebar/styles/square/active-tab-marker.css
+++ b/webextensions/sidebar/styles/square/active-tab-marker.css
@@ -1,20 +1,16 @@
 :root {
   --tab-active-marker: Highlight;
-  --tab-active-marker-inactive: darkgray;
+  --tab-active-marker-inactive: rgba(0, 0, 0, 0.2);
   --tab-active-marker-size: calc(var(--favicon-size) / 8);
+  --tab-active-marker-animation: 0.25s cubic-bezier(0.07, 0.95, 0, 1);
 }
 
 .active-marker::before {
-  bottom: 10%;
   content: "";
-  left: 10%;
+  opacity: 0;
   position: absolute;
-  right: 10%;
-  top: 10%;
-  transition: bottom var(--collapse-animation),
-              left var(--collapse-animation),
-              right var(--collapse-animation),
-              top var(--collapse-animation);
+  transition: opacity var(--tab-active-marker-animation),
+              transform var(--tab-active-marker-animation);
 }
 
 .tab:not(.active):hover .active-marker::before {
@@ -24,26 +20,33 @@
   background: var(--tab-active-marker);
 }
 
+.tab:not(.faviconized) .active-marker::before {
+  bottom: 0;
+  top: 0;
+  transform: scaleY(0);
+  width: var(--tab-active-marker-size);
+}
 :root.left .tab:not(.faviconized) .active-marker::before {
   left: 0;
-  width: var(--tab-active-marker-size);
 }
 :root.right .tab:not(.faviconized) .active-marker::before {
   right: 0;
-  width: var(--tab-active-marker-size);
 }
 .tab:not(.faviconized):hover .active-marker::before,
 .tab.active:not(.faviconized) .active-marker::before {
-  bottom: 0;
-  top: 0;
+  opacity: 1;
+  transform: scaleY(1);
 }
 
 .tab.faviconized .active-marker::before {
   height: var(--tab-active-marker-size);
+  left: 0;
+  right: 0;
   top: 0;
+  transform: scaleX(0);
 }
 .tab.faviconized:hover .active-marker::before,
 .tab.active.faviconized .active-marker::before {
-  left: 0;
-  right: 0;
+  opacity: 1;
+  transform: scaleX(1);
 }
