Apply animation effect only when it is allowed

--- a/webextensions/sidebar/styles/square/active-tab-marker.css
+++ b/webextensions/sidebar/styles/square/active-tab-marker.css
@@ -9,6 +9,9 @@
   content: "";
   opacity: 0;
   position: absolute;
+}
+
+:root.animation .active-marker::before {
   transition: opacity var(--tab-active-marker-animation),
               transform var(--tab-active-marker-animation);
 }
