--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -66,6 +66,7 @@
 
 :root[color-scheme="system-color"] {
   --tab-surface: var(--browser-bg-base, -moz-dialog);
+  --tab-surface-hover: var(--browser-bg-more-lighter, ThreeDHighlight);
   --tab-text: var(--browser-fg, -moz-dialogtext);
   --tab-text-inverted: var(--browser-bg-lighter, -moz-dialog);
   --tab-active-text: var(--browser-fg-active, -moz-dialogtext);
