--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -66,7 +66,7 @@
 
 :root[color-scheme="system-color"] {
   --tab-surface: var(--browser-bg-base, -moz-dialog);
-  --tab-surface-hover: var(--browser-bg-more-lighter, ThreeDHighlight);
+  --tab-surface-hover: var(--browser-bg-more-lighter, var(--face-highlight-more-more-lighter));
   --tab-surface-active: var(--browser-bg-lighter, var(--face-highlight-lighter));
   --tab-surface-active-hover: var(--browser-bg-more-lighter, var(--face-highlight-more-lighter));
   --tab-text: var(--browser-fg, -moz-dialogtext);
