--- a/webextensions/sidebar/styles/square/mixed.css
+++ b/webextensions/sidebar/styles/square/mixed.css
@@ -13,6 +13,19 @@
   --tab-surface-active-gradient-start: rgba(249, 249, 250, 0.4);
   --tab-surface-active-gradient-end:   rgba(249, 249, 250, 0);
 }
+:root .tab:not(.active):hover {
+  --tab-surface-active-gradient-start: rgba(249, 249, 250, 0.25);
+  --tab-surface-active-gradient-end:   rgba(249, 249, 250, 0);
+}
+
+:root[color-scheme="system-color"] {
+  --tab-surface-active-gradient-start: var(--face-gradient-start-active);
+  --tab-surface-active-gradient-end:   var(--face-gradient-end);
+}
+:root[color-scheme="system-color"] .tab:not(.active):hover {
+  --tab-surface-active-gradient-start: var(--face-gradient-start-inactive);
+  --tab-surface-active-gradient-end:   var(--face-gradient-end);
+}
 
 :root,
 #background {
@@ -36,11 +49,6 @@
   --tab-surface: var(--tab-surface-active-hover);
 }
 
-
-:root .tab:not(.active):hover {
-  --tab-surface-active-gradient-start: rgba(249, 249, 250, 0.25);
-  --tab-surface-active-gradient-end:   rgba(249, 249, 250, 0);
-}
 
 :root.left .tab:not(.faviconized).active {
   background-image: -moz-linear-gradient(
