--- a/webextensions/common/fake-context-menu/sidebar.css
+++ b/webextensions/common/fake-context-menu/sidebar.css
@@ -100,3 +100,16 @@
 #tabContextMenu .accesskey {
   text-decoration: underline;
 }
+
+#tabContextMenu-blocking-screen {
+  display: none;
+}
+
+#tabContextMenu.open + #tabContextMenu-blocking-screen {
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 899999;
+}
