--- a/webextensions/common/fake-context-menu/sidebar.css
+++ b/webextensions/common/fake-context-menu/sidebar.css
@@ -107,6 +107,7 @@
 
 #tabContextMenu.open + #tabContextMenu-blocking-screen {
   bottom: 0;
+  display: block;
   left: 0;
   position: fixed;
   right: 0;
