--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -214,6 +214,12 @@ ul {
   z-index: 100;
 }
 
+.tab.hidden {
+  pointer-events: none;
+  position: fixed;
+  visibility: collapse;
+}
+
 :root.animation .tab.animation-ready,
 :root.animation .after-tabs button {
   transition: var(--tab-animation);
