--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -519,10 +519,15 @@ ul {
   transition: opacity var(--collapse-animation);
   z-index: 200;
 }
-.after-tabs .newtab-action-selector-anchor {
+:root.contextual-identity-selectable
+  .after-tabs
+  .newtab-action-selector-anchor {
   border-width: 0 1px 0 0;
   left: 0;
 }
+:root:not(.contextual-identity-selectable)
+  .after-tabs
+  .newtab-action-selector-anchor,
 .after-tabs .contextual-identities-selector-anchor {
   border-width: 0 0 0 1px;
   right: 0;
