--- a/webextensions/sidebar/styles/square/base.css
+++ b/webextensions/sidebar/styles/square/base.css
@@ -1,3 +1,9 @@
+/*
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+*/
+
 .tab,
 .after-tabs button {
   padding: 0.3em 0.25em;
